--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
 	<div class = "col-xs-3"></div>
 </div>
 	<div class="row">
-		<form class="form-horizontal  col-md-6 col-md-offset-3 jumbotron" action="">
+		<form class="form-horizontal  col-md-6 col-md-offset-3 jumbotron" action="login" method="POST">
 			<fieldset>
 				<span class="icon-preview col-lg-9 hidden-md hidden-sm hidden-xs" ><i class="mdi-action-account-circle"></i><span></span></span>
 				<legend class="col-lg-3 ">Sign In</legend>
