SignIn and SignUp pages POST to desired URLs/links

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,23 +12,22 @@
 				<div class="form-group">
 					<label for="inputEmail" class="col-lg-2 control-label">Email</label>
 					<div class="col-lg-10">
-						<input type="email" class="form-control" id="focusedInput" required  placeholder="your codex email ..."></div>
+						<input name='username' type="email" class="form-control" id="focusedInput" required  placeholder="your codex email ..."></div>
 				</div>
 				<div class="form-group">
 					<label for="inputPassword" class="col-lg-2 control-label">Password</label>
 					<div class="col-lg-10">
-						<input type="password" class="form-control" id="inputPassword" required placeholder="Password">
+						<input name='password' type="password" class="form-control" id="inputPassword" required placeholder="Password">
 						<br></div>
 				</div>
 
-				<div class="form-group">
-					<div class="col-lg-3 col-lg-offset-9">
-						<button type="submit" class="btn btn-primary">Submit</button>
+				<div class="row form-group">
+					<div class="col-lg-3 col-lg-offset-8">
+						<button type="submit" class="btn btn-primary">LogIn</button>
 					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-lg-3 col-lg-offset-9">
-						<a href="/signup">Don't have an account? Sign up here</a>
+				
+					<div class="col-lg-3 col-lg-offset-8">
+						<a href="/signup" class="btn btn-danger">Sign Up</a>
 					</div>
 				</div>
 			</fieldset>
