--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,10 +5,12 @@
 	<div class = "col-xs-3"></div>
 </div>
 	<div class="row">
+		<div class = "col-lg-3 col-lg-offset-5"><h4>{{msg}}</h4></div>
 		<form class="form-horizontal  col-md-6 col-md-offset-3 jumbotron" action="signup" method="POST">
 			<fieldset>
 				<span class="icon-preview col-lg-9 hidden-md hidden-sm hidden-xs" ><i class="mdi-action-account-circle"></i><span></span></span>
 				<legend class="col-lg-3 ">Sign Up</legend>
+
 				<div class="form-group">
 					<label for="inputEmail" class="col-lg-2 control-label">Email</label>
 					<div class="col-lg-10">
@@ -34,7 +36,6 @@
 					</div>
 				</div>
 			</fieldset>
-
 		</form>
 	</div><!-- /.row -->
 </div><!-- /.container -->
