--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,25 +48,8 @@
 				<li>
 					<a href="#">Username</a>
 				</li>
-				<li class="dropdown">
-					<a href="post.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
-						Dropdown <b class="caret"></b>
-					</a>
-					<ul class="dropdown-menu">
-						<li>
-							<a href="#">Action</a>
-						</li>
-						<li>
-							<a href="#">Another action</a>
-						</li>
-						<li>
-							<a href="#">Something else here</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">Separated link</a>
-						</li>
-					</ul>
+				<li>
+					<a href="/logout">Logout</a>
 				</li>
 			</ul>
 		</div>
