added method to render new posts page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,5 +14,13 @@
 .navbar .navbar-brand{
 	background-image: url("/img/thumb.png");
 	background-size: cover;
-	
+
+}
+
+.postForm input{
+	width: 70%;
+}
+
+.bodyForm{
+	height: 7em;
 }
