--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,21 +26,8 @@
 				<li>
 					<a href="/home">Posts</a>
 				</li>
-				<li class="dropdown">
-					<a href="/posts" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
-						Dropdown <b class="caret"></b>
-					</a>
-					<ul class="dropdown-menu">
-						<li>
-							<a href="#">Term 1</a>
-						</li>
-						<li>
-							<a href="#">Term 2</a>
-						</li>
-						<li>
-							<a href="#">Term 3</a>
-						</li>
-					</ul>
+				<li>
+					<a href="/posts/new">New Post</a>
 				</li>
 			</ul>
 			<form class="navbar-form navbar-left">
