Posting new posts to database now sone

--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="postForm" action = 'POST' method="/posts/new">
+	<form class="postForm" action='/posts/new' method="POST">
 
 			<div class="well">
           <h4>Article Heading</h4>
