--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,7 @@
 <div class="container">
+  {{#article}}
   <div class="media well">
-    <h2>How to hack a website</h2>
+    <h2>{{heading}}</h2>
     <a class="pull-left" href="#">
       <img class="media-object" src="http://placehold.it/64x64" alt=""></a>
     <div class="media-body">
@@ -8,61 +9,15 @@
         Emanuelle
         <small>September 25, 2015 at 9:30 PM</small>
       </h4>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+    <p>{{content}}</p>
     </div>
     <div class="col-md-2 col-md-offset-10">
       <a href="post.html" class="btn btn-primary btn-xs">Read More</a>
     </div>
     <!-- /.col-md-3 col-md-offset-9 -->
   </div>
-  <div class="media well">
-    <h2>CSS Animations</h2>
-    <a class="pull-left" href="#">
-      <img class="media-object" src="http://placehold.it/64x64" alt=""></a>
-    <div class="media-body">
-      <h4 class="media-heading">
-        Aya
-        <small>September 25, 2015 at 9:30 PM</small>
-      </h4>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-    <div class="col-md-2 col-md-offset-10">
-      <a href="post.html" class="btn btn-primary btn-xs">Read More</a>
-    </div>
-    <!-- /.col-md-3 col-md-offset-9 -->
-  </div>
-  <div class="media well">
-    <h2>My wordpress blog</h2>
-    <a class="pull-left" href="#">
-      <img class="media-object" src="http://placehold.it/64x64" alt=""></a>
-    <div class="media-body">
-      <h4 class="media-heading">
-        Pretty
-        <small>September 25, 2015 at 9:30 PM</small>
-      </h4>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-    <div class="col-md-2 col-md-offset-10">
-      <a href="post.html" class="btn btn-primary btn-xs">Read More</a>
-    </div>
-    <!-- /.col-md-3 col-md-offset-9 -->
-  </div>
-  <div class="media well">
-    <h2>Nodebots</h2>
-    <a class="pull-left" href="#">
-      <img class="media-object" src="http://placehold.it/64x64" alt=""></a>
-    <div class="media-body">
-      <h4 class="media-heading">
-        Denver
-        <small>September 25, 2015 at 9:30 PM</small>
-      </h4>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-    <div class="col-md-2 col-md-offset-10">
-      <a href="post.html" class="btn btn-primary btn-xs">Read More</a>
-    </div>
-    <!-- /.col-md-3 col-md-offset-9 -->
-  </div>
+  {{/article}}
+
   <div class="center-pagination col-md-6 col-md-offset-4">
     <ul class="pagination">
       <li>
