Can view the entire article and its comments by clicking READ MORE button.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
     <p>{{content}}</p>
     </div>
     <div class="col-md-2 col-md-offset-10">
-      <a href="post.html" class="btn btn-primary btn-xs">Read More</a>
+      <a href="post/{{heading}}" class="btn btn-primary btn-xs">Read More</a>
     </div>
     <!-- /.col-md-3 col-md-offset-9 -->
   </div>
