--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -7,7 +7,7 @@
         </br>
         </br>
           <h4>Article Body</h4>
-  				<input class = "bodyForm" type="text" name="content" placeholder="Article Body"></input>
+  				<textarea class="bodyForm" type="text" name="content" placeholder="Article Body"></textarea>
         </br>
         </br>
           <button type="submit">Submit</button>
