--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,16 +1,14 @@
 <div class="container">
 	<div class="row">
-
+			
+			{{#article}}
 			<div class="well">
-				<h1>Understanding Callbacks</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h1>{{heading}}</h1>
+				<p>{{content}}</p>
+				
 				<h4>Mawande</h4>
 			</div><!-- /.well -->
+			{{/article}}
 
 
 			<!-- Blog Comments -->
