--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -3,13 +3,13 @@
 
 			<div class="well">
           <h4>Article Heading</h4>
-  				<input type="text" name="heading" placeholder="Article Heading"></input>
-        </br>
-        </br>
+  				<input type="text" name="heading" placeholder="Article Heading"/>
+        <br/>
+        <br/>
           <h4>Article Body</h4>
-  				<textarea class="bodyForm" type="text" name="content" placeholder="Article Body"></textarea>
-        </br>
-        </br>
+  				<textarea style="width:40em" class="bodyForm" type="text" name="content" placeholder="Article Body"></textarea>
+        <br/>
+        <br/>
           <button type="submit">Submit</button>
 
 			</div><!-- /.well -->
