render comments from article method

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,11 +1,11 @@
 <div class="container">
 	<div class="row">
-			
+
 			{{#article}}
 			<div class="well">
 				<h1>{{heading}}</h1>
 				<p>{{content}}</p>
-				
+
 				<h4>Mawande</h4>
 			</div><!-- /.well -->
 
@@ -27,30 +27,19 @@
 
 		<!-- Posted Comments -->
 
-		<!-- Comment -->
+		{{#comments}}
 		<div class="media well">
 				<a class="pull-left" href="#">
 						<img class="media-object" src="http://placehold.it/64x64" alt="">
 				</a>
 				<div class="media-body">
-						<h4 class="media-heading">Tariq
+						<h4 class="media-heading">Human
 								<small>September 25, 2015 at 9:30 PM</small>
 						</h4>
-						Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+						{{comment}}
 				</div>
 		</div>
-
-		<div class="media well">
-				<a class="pull-left" href="#">
-						<img class="media-object" src="http://placehold.it/64x64" alt="">
-				</a>
-				<div class="media-body">
-						<h4 class="media-heading">Pholisa
-								<small>September 25, 2015 at 9:30 PM</small>
-						</h4>
-						Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-				</div>
-		</div>
+		{{/comments}}
 
 
 	</div><!-- /.row -->
