--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -33,8 +33,8 @@
 						<img class="media-object" src="http://placehold.it/64x64" alt="">
 				</a>
 				<div class="media-body">
-						<h4 class="media-heading">Human
-								<small>September 25, 2015 at 9:30 PM</small>
+						<h4 class="media-heading">{{user}}
+								<small>{{date}}</small>
 						</h4>
 						{{comment}}
 				</div>
