--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,8 +6,8 @@
       <img class="media-object" src="http://placehold.it/64x64" alt=""></a>
     <div class="media-body">
       <h4 class="media-heading">
-        Emanuelle
-        <small>September 25, 2015 at 9:30 PM</small>
+        {{user}}
+        <small>{{date}}</small>
       </h4>
     <p>{{content}}</p>
     </div>
