--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -4,9 +4,12 @@
 			{{#article}}
 			<div class="well">
 				<h1>{{heading}}</h1>
-				<p>{{content}}</p>
+				<small>{{user}}</small>
+				<br/>
+				<small>{{date}}</small>
+				<h4>{{content}}</h4>
 
-				<h4>Mawande</h4>
+
 			</div><!-- /.well -->
 
 			<!-- Blog Comments -->
