Fixed user field in nav-bar

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -4,9 +4,10 @@
 			{{#article}}
 			<div class="well">
 				<h1>{{heading}}</h1>
-				<small>{{user}}</small>
-				<br/>
-				<small>{{date}}</small>
+				<h5 class="media-heading">
+	        {{user}}
+	        <small>{{date}}</small>
+	      </h5>
 				<h4>{{content}}</h4>
 
 
