--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
 				<input type="text" class="form-control col-lg-8" placeholder="Search"></form>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="#">Username</a>
+					<a href="#">{{user}}</a>
 				</li>
 				<li>
 					<a href="/logout">Logout</a>
