added categories to the menu nav bar

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,7 +19,7 @@
   </div>
   {{/article}}
 
-  <div class="center-pagination col-md-6 col-md-offset-4">
+<!--  <div class="center-pagination col-md-6 col-md-offset-4">
     <ul class="pagination">
       <li>
         <a href="#">&laquo;</a>
