--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
 					<a href="/posts/new">New Post</a>
 				</li>
 				<li>
-				    <a class="dropdown-toggle" data-toggle="dropdown">Categories<span class="caret"></span></a>
+				    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories<span class="caret"></span></a>
 				    <ul class="dropdown-menu">
 				      <li><a href="#">HTML</a></li>
 				      <li><a href="#">CSS</a></li>
