--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,8 +18,7 @@
     <!-- /.col-md-3 col-md-offset-9 -->
   </div>
   {{/article}}
-
-<!--  <div class="center-pagination col-md-6 col-md-offset-4">
+ <div class="center-pagination col-md-6 col-md-offset-4">
     <ul class="pagination">
       <li>
         <a href="#">&laquo;</a>
@@ -44,5 +43,7 @@
       </li>
     </ul>
   </div>
-  <!-- /.center-pagination -->
+  <button>
+    <a href="/posts/new">New Post</a>
+  </button>
 </div>
