--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -9,9 +9,25 @@
           <h4>Article Body</h4>
   				<textarea style="width:40em" class="bodyForm" type="text" name="content" placeholder="Article Body"></textarea>
         <br/>
+				<br/>
+				<div>
+					<em>Tags</em>
+					<select data-placeholder="Choose a Language..." class="chosen-select" multiple style="width:350px;" tabindex="4">
+						<option value=""></option>
+						<option value="Javascript">Javascript</option>
+						<option value="Python">Python</option>
+						<option value="HTML">HTML</option>
+						<option value="CSS">CSS</option>
+						<option value="jQuery">jQuery</option>
+						<option value="MySQL">MySQL</option>
+						<option value="Mongodb">Mongodb</option>
+					</select>
+				</div>
+		</div>
         <br/>
           <button type="submit">Submit</button>
-
+					<input type="file" id="uploadme" />
+					<input type="button" id="clickme" value="Upload file!" />
 			</div><!-- /.well -->
 
 
