--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,13 +3,16 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Codex Resources</title>
-
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<!-- Material minified -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material-fullpalette.min.css" />
 	<link rel="stylesheet" href="/css/main.css" />
+	<link rel="stylesheet" href="http://harvesthq.github.io/chosen/docsupport/style.css">
+	<link rel="stylesheet" href="http://harvesthq.github.io/chosen/docsupport/prism.css">
+	<link rel="stylesheet" href="http://harvesthq.github.io/chosen/chosen.css">
 </head>
+
 <body>
 	{{#if user}}
 	<div class="navbar  navbar-default">
@@ -19,22 +22,19 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">___</a>
+			<a class="navbar-brand">___</a>
 		</div>
 		<div class="navbar-collapse collapse navbar-default-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a href="/home">Posts</a>
+					<a href="/home">Home</a>
 				</li>
 				<li>
-					<a href="/posts/new">New Post</a>
-				</li>
-				<li>
-				    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories<span class="caret"></span></a>
+				    <a href="#" class="navbar-collapse collapse navbar-default-collapse dropdown-toggle" data-toggle="dropdown">Categories<span class="caret"></span></a>
 				    <ul class="dropdown-menu">
-				      <li><a href="#">HTML</a></li>
-				      <li><a href="#">CSS</a></li>
-				      <li><a href="#">JavaScript</a></li>
+				      <li><a href="#">Agile</a></li>
+				      <li><a href="#">Design</a></li>
+				      <li><a href="#">Language</a></li>
 				    </ul>
 		  	</li>
 			</ul>
@@ -56,5 +56,22 @@
   <script src = "/js/bootstrap.min.js"></script>
   <script src = "/js/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+	<!--Chosen-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+	<script src="http://harvesthq.github.io/chosen/chosen.jquery.js" type="text/javascript"></script>
+	<script src="http://harvesthq.github.io/chosen/docsupport/prism.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript">
+		var config = {
+			'.chosen-select'           : {},
+			'.chosen-select-deselect'  : {allow_single_deselect:true},
+			'.chosen-select-no-single' : {disable_search_threshold:10},
+			'.chosen-select-no-results': {no_results_text:'Oops, nothing found!'},
+			'.chosen-select-width'     : {width:"95%"}
+		}
+		for (var selector in config) {
+			$(selector).chosen(config[selector]);
+		}
+	</script>
 </body>
 </html>
