--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -11,8 +11,8 @@
         <br/>
 				<br/>
 				<div>
-					<em>Tags</em>
-					<select data-placeholder="Choose a Language..." class="chosen-select" multiple style="width:350px;" tabindex="4">
+					<em>Topic Tags</em>
+					<select data-placeholder="Choose a Topic Tag..." class="chosen-select" multiple style="width:350px;" tabindex="4">
 						<option value=""></option>
 						<option value="Javascript">Javascript</option>
 						<option value="Python">Python</option>
