trying to fix topics button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,9 +30,9 @@
 					<a href="/home">Home</a>
 				</li>
 				<li>
-				    <a href="#" id="topic" class="navbar-collapse collapse navbar-default-collapse dropdown-toggle" data-toggle="dropdown">Topics<span class="caret"></span></a>
+				    <a id="topic" class="navbar-collapse collapse navbar-default-collapse dropdown-toggle" data-toggle="dropdown">Topics<span class="caret"></span></a>
 					  <ul id="listTopics" class="dropdown-menu">
-				      <li>{{Topics}}</li>
+				      <li>{{name}}</li>
 				    </ul>
 		  	</li>
 				<li>
@@ -56,7 +56,6 @@
 	{{{body}}}
 	<!-- Latest compiled and minified JavaScript -->
 	<script src = "/js/jquery.js"></script>
-	<script src = "/js/script.js"></script>
   <script src = "/js/bootstrap.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
