--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Codex Resources</title>
+	<title>Codex Source</title>
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<!-- Material minified -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material-fullpalette.min.css" />
 	<link rel="stylesheet" href="/css/main.css" />
+
 </head>
 <body>
 	{{#if user}}
@@ -19,24 +20,24 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">___</a>
+			<a class="navbar-brand" >___</a>
 		</div>
 		<div class="navbar-collapse collapse navbar-default-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a href="/home">Posts</a>
+					<a href="/home">Home</a>
 				</li>
 				<li>
-					<a href="/posts/new">New Post</a>
-				</li>
-				<li>
-				    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories<span class="caret"></span></a>
+				    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Topics<span class="caret"></span></a>
 				    <ul class="dropdown-menu">
-				      <li><a href="#">HTML</a></li>
-				      <li><a href="#">CSS</a></li>
-				      <li><a href="#">JavaScript</a></li>
+				      <li><a href="#">{{Topics.name}}</a></li>
+				      <!--<li><a href="#">CSS</a></li>
+				      <li><a href="#">JavaScript</a></li>-->
 				    </ul>
 		  	</li>
+				<li>
+					<a href="/posts/new">Add New Post</a>
+				</li>
 			</ul>
 			<form class="navbar-form navbar-left">
 				<input type="text" class="form-control col-lg-8" placeholder="Search"></form>
@@ -53,8 +54,8 @@
 	{{/if}}
 	{{{body}}}
 	<!-- Latest compiled and minified JavaScript -->
-  <script src = "/js/bootstrap.min.js"></script>
-  <script src = "/js/jquery.js"></script>
+	<script src = "/js/bootstrap.min.js"></script>
+	<script src = "/js/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
